# scc-blockchain

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  EXTERNAL_AUDIT_PREP.md  LICENSE  PATCH_04.md  PATCH_05.md  PATCH_06.md  PATCH_07.md  PATCH_08.md  PATCH_09.md  PATCH_10.md  POSITIONING.md  PROTOCOL.md  README.md  THREAT_MODEL.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/sccgub-api/: Cargo.toml  openapi.yaml
crates/sccgub-api/src/: handlers.rs  lib.rs  openapi.rs  operator_auth.rs  patch_04.rs  responses.rs  router.rs
crates/sccgub-audit/: Cargo.toml
crates/sccgub-audit-py/: README.md  pyproject.toml
crates/sccgub-audit-py/sccgub_audit/: __init__.py  chain_state.py  cli.py  field.py  verifier.py  violation.py
crates/sccgub-audit-py/tests/: test_chain_state.py  test_field.py  test_verifier.py  test_violation.py
crates/sccgub-audit-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
crates/sccgub-audit-ts/src/: chainState.ts  cli.ts  field.ts  index.ts  verifier.ts  violation.ts
crates/sccgub-audit-ts/tests/: chainState.test.ts  field.test.ts  verifier.test.ts  violation.test.ts
crates/sccgub-audit/conformance-fixtures/: degenerate_height_zero_preserved.json  drift_max_proof_depth.expected  drift_max_proof_depth.json  drift_max_validator_set_size.expected  drift_max_validator_set_size.json  drift_middle_transition_max_block_gas.expected  drift_middle_transition_max_block_gas.json  drift_min_fee_floor_decrease.expected  drift_min_fee_floor_decrease.json  drift_pre_transition_max_address_length.expected  drift_pre_transition_max_address_length.json  empty_history.json  non_monotonic_history.expected  non_monotonic_history.json  single_transition_preserved.json  three_transitions_preserved.json
crates/sccgub-audit/src/: chain_state.rs  field.rs  lib.rs  verifier.rs  violation.rs
crates/sccgub-consensus/: Cargo.toml
crates/sccgub-consensus/src/: equivocation.rs  finality.rs  fork_choice.rs  law_sync.rs  lib.rs  partition.rs  protocol.rs  safety.rs  slashing.rs  view_change.rs
crates/sccgub-crypto/: Cargo.toml
crates/sccgub-crypto/src/: canonical.rs  hash.rs  keys.rs  keystore.rs  lib.rs  merkle.rs  roles.rs  signature.rs
crates/sccgub-execution/: Cargo.toml
crates/sccgub-execution/src/: ceilings.rs  chain_version_check.rs  constraints.rs  contract.rs  cpog.rs  evidence_admission.rs  forgery_veto.rs  gas.rs  invariants.rs  key_rotation_check.rs  lib.rs  ontology.rs  payload_check.rs  phi.rs  scce.rs  validate.rs  validator_set.rs  wh_check.rs
crates/sccgub-governance/: Cargo.toml
crates/sccgub-governance/src/: agent_policy.rs  anti_concentration.rs  containment.rs  emergency.rs  lib.rs  norms.rs  patch_04.rs  precedence.rs  proposals.rs  registration.rs  responsibility.rs  validator.rs
crates/sccgub-network/: Cargo.toml
crates/sccgub-network/src/: lib.rs  messages.rs  peer.rs
crates/sccgub-node/: Cargo.toml
crates/sccgub-node/benches/: block_production.rs
crates/sccgub-node/src/: api_bridge.rs  chain.rs  config.rs  lib.rs  main.rs  mempool.rs  network.rs  observability.rs  persistence.rs
crates/sccgub-node/tests/: adversarial_test.rs  integration_test.rs  multi_validator_convergence.rs  patch_04_conformance.rs  patch_05_conformance.rs  patch_06_conformance.rs  patch_06_consensus_properties.rs  patch_07_primitive_properties.rs  patch_10_typed_consensus_param_lifecycle.rs  pipeline_test.rs  property_test.rs
crates/sccgub-state/: Cargo.toml
crates/sccgub-state/src/: apply.rs  assets.rs  balances.rs  chain_version_history_state.rs  constitutional_ceilings_state.rs  escrow.rs  key_rotation_state.rs  lib.rs  pruning.rs  store.rs  tension.rs  tension_history.rs  treasury.rs  trie.rs  validator_set_state.rs  world.rs
crates/sccgub-types/: Cargo.toml
crates/sccgub-types/src/: agent.rs  artifact.rs  attestation.rs  block.rs  bridge.rs  builder.rs  causal.rs  compliance.rs  consensus_params.rs  constitutional_ceilings.rs  contract.rs  delegation.rs  dispute.rs  domain.rs  economics.rs  events.rs  forgery_veto.rs  future.rs  governance.rs  key_rotation.rs  lib.rs  lineage.rs  mfidel.rs  namespace.rs  proof.rs  receipt.rs  rights.rs  session.rs  state.rs  tension.rs  timestamp.rs  transition.rs  typed_params.rs  upgrade.rs  validator_set.rs
crates/sccgub-types/src/primitives/: escrow.rs  message.rs  mod.rs  reference.rs  supersession.rs
crates/sccgub-types/tests/: patch_05_06_economics_properties.rs
docs/: FINANCE_EXTRACTION_PLAN.md  INVARIANTS.md  PRUNING_RESOLUTION_DESIGN.md  STATUS.md  THESIS_AUDIT.md  THESIS_AUDIT_PT2.md  THESIS_AUDIT_PT3.md
docs/audits/: 2026-04-18-dca-v0.5.0-layers-2-3-4.md  2026-04-19-dca-pre-merge-patch-10.md  2026-04-20-dca-pre-merge-v0.8.3-ceiling-field-19.md  2026-04-20-dca-pre-merge-v0.8.4-remediation.md  2026-04-20-dca-pre-merge-v0.8.4-third-pass.md  2026-04-20-dca-pre-merge-v0.8.4-typed-modify-consensus-param.md  2026-04-20-pre-v0.8.4-discovery-patch-05-section-25-gap.md
scripts/: README.md  ci-local.ps1  cross-language-conformance.py  demo-api-surface.ps1  demo-api-surface.sh  demo-governed-lifecycle.ps1  demo-governed-lifecycle.sh  run-ci.ps1  run-ci.sh  update-repo-truth.ps1  verify-repo-truth.ps1
specs/: DEMO_GOVERNED_LIFECYCLE.md  GOVERNED_JSON_SCHEMA.json  OBSERVE_JSON_SCHEMA.md  SCCGUB_SPEC.md  SCCGUB_v2.1_AUDIT_AND_REFINEMENT.md  SCCGUB_v2_ENHANCED.md  STATUS_JSON_SCHEMA.json
