[workspace]
resolver = "2"
members = [
    "crates/sccgub-types",
    "crates/sccgub-crypto",
    "crates/sccgub-state",
    "crates/sccgub-execution",
    "crates/sccgub-governance",
    "crates/sccgub-consensus",
    "crates/sccgub-network",
    "crates/sccgub-api",
    "crates/sccgub-node",
]

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/tamirat-wubie/scc-blockchain"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
hex = { version = "0.4", features = ["serde"] }
bincode = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1"
subtle = "2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
redb = "4"
