[package]
name = "sccgub-api"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sccgub-types = { path = "../sccgub-types" }
sccgub-crypto = { path = "../sccgub-crypto" }
sccgub-state = { path = "../sccgub-state" }
sccgub-execution = { path = "../sccgub-execution" }
sccgub-consensus = { path = "../sccgub-consensus" }
sccgub-governance = { path = "../sccgub-governance" }
tower = { workspace = true }
tower-http = { workspace = true }
