[package]
name = "sccgub-execution"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
sccgub-types = { path = "../sccgub-types" }
sccgub-crypto = { path = "../sccgub-crypto" }
sccgub-state = { path = "../sccgub-state" }
thiserror = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
