[package]
name = "sccgub-network"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
sccgub-types = { path = "../sccgub-types" }
sccgub-crypto = { path = "../sccgub-crypto" }
sccgub-consensus = { path = "../sccgub-consensus" }
