[package]
name = "sccgub-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sccgub"
path = "src/main.rs"

[[bench]]
name = "block_production"
harness = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
sccgub-types = { path = "../sccgub-types" }
sccgub-crypto = { path = "../sccgub-crypto" }
sccgub-state = { path = "../sccgub-state" }
sccgub-execution = { path = "../sccgub-execution" }
sccgub-governance = { path = "../sccgub-governance" }
sccgub-consensus = { path = "../sccgub-consensus" }
sccgub-api = { path = "../sccgub-api" }
sccgub-network = { path = "../sccgub-network" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
